--- a/Back-end/login.html
+++ b/Back-end/login.html
@@ -8,22 +8,53 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <header>
+        <h2 class="ProjectName">WSU CampusSafe</h2>
+        <nav class="navigation">
+            <a href="#"> Safety Information</a>
+            <a href="#"> Contact Us</a>
+            <button class="loginButton"> Login </button>
+        </nav>
+    </header>
+
     <div class = "wrapper">
-        <form action ="">
+        <div class = "form-login">
             <h1>Login</h1>
-            <div class="input-box">
-                <input type="text" placeholder="Username" required>
-                <i class='bx bxs-user-circle'></i>
-            </div>
-            <div class="input-box">
-                <input type="password" placeholder="Password" required>
-                <i class='bx bxs-lock-alt'></i>
-            </div>
-            <button type="submit" class="btn">Login</button>
-            <div class="register-link">
-                <p>Don't have an account? <a href = "#"> Register</a></p>
-            </div>
-        </form>
+            <form action ="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Username" required>
+                    <i class='bx bxs-user-circle'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" placeholder="Password" required>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <button type="submit" class="btn">Login</button>
+                <div class="register-link">
+                    <p>Don't have an account? <a href = "#"> Register</a></p>
+                </div>                
+            </form>       
+        </div>
+
+        <div class = "form-register">
+            <h1>Register</h1>
+            <form action ="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Username" required>
+                    <i class='bx bxs-user-circle'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" placeholder="Password" required>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <button type="submit" class="btn">Register</button>
+                <div class="login-link">
+                    <p>Have an account already? <a href = "#"> Login</a></p>
+                </div>                
+            </form>       
+        </div>
     </div>
+
+    <script src="loginScript.js"></script>
 </body>
 </html>
