--- a/Application/Front_End/SubmitIncidentReport.html
+++ b/Application/Front_End/SubmitIncidentReport.html
@@ -10,6 +10,16 @@
     <script src="./JScriptFiles/SubmitIncidentReport.js"></script>
 </head>
 <body>
+    <header>
+        <h2 class="ProjectName">WSU CampusSafe</h2>
+        <nav class="navigation">
+            <a href="HomePage.html"> Home</a>
+            <a href="SafetyInformation.html"> Safety Information</a>
+            <a href="#"> Contact Us</a>
+            <a href="#">Submit Incident Report</a>
+        </nav>
+    </header>
+
     <div class="container">
         <h2>Submit an Incident Report</h2>
         <form id="reportForm">
