--- a/Application/Front_End/SafetyInformation.html
+++ b/Application/Front_End/SafetyInformation.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <div class= "header">
         <h2 class="ProjectName">WSU CampusSafe</h2>
         <nav class="navigation">
             <a href="HomePage.html"> Home</a>
@@ -18,7 +18,7 @@
             <a href="Contact.html"> Contact Us</a>
             <a href="SubmitIncidentReport.html">Submit Incident Report</a>
         </nav>
-    </header>
+    </div>
 
     <div class = "OverallReminder">
         <h2>General Safety Reminders</h2>
@@ -34,8 +34,7 @@
             enforcement is required to stop the shooting and mitigate harm to victims. Because active shooter situations
             are often over within 10 to 15 minutes, before law enforcement arrives on the scene, individuals must be
             prepared both mentally and physically to deal with an active shooter situation.</p>
-        <h3>How to Respond</h3>
-        <p>Run, Hide, Fight</p>
+        <h3>Remember to Run, Hide, Fight</h3>
         <h4>Run</h4>
         <p>Have an escape route and plan in mind. Leave your belongings behind. Keep your hands visible.</p>
         <h4>Hide</h4>
@@ -48,6 +47,7 @@
         <h3>When Law Enforcement Arrives</h3>
         <p>Remain calm and follow instructions. Keep your hands visible at all times. Avoid making quick movements
             toward officers such as holding on to them for safety.</p>
+    
 
         <!-- Active Shooter Videos-->
             <h2> Active Shooter Videos</h2>
@@ -85,8 +85,16 @@
         <h2> Medical </h2>
         <p>You don't have to be a doctor to save a life. All you need to do is stabilize the person until help arrives. Below are some tips to help you in case of a medical emergency.</p>
         <h3>Medical Emergency Tips</h3>
+        <ul>
+            <li>Call 911 immediately if you suspect someone is having a medical emergency.</li>
+            <li>Stay with the person until help arrives.</li>
+            <li>Do not move the person unless they are in immediate danger.</li>
+            <li>Check for breathing and a pulse. If the person is not breathing, perform CPR.</li>
+            <li>If the person is bleeding, apply pressure to the wound.</li>
+            <li>If the person is choking, perform the Heimlich maneuver.</li>
+            <li>If the person is having a seizure, move objects away from them and do
 
-         <!--Images-->
+        <!--Images-->
 
 
         <!--Videos-->
@@ -95,7 +103,11 @@
 
     <div class = "SAR">
         <h2> Sexual Assault and Rape </h2>
-        
+        <p> Sexual assault and rape are serious crimes that can have long-lasting effects on the victim. Below are some tips to help you in case of a sexual
+            assault. It's important to get help as soon as possible.</p>
+        <p> If you are a victim of sexual assault, please call the National Sexual Assault Hotline at 
+            1-800-656-4673. They are available 24/7 to help you. Do not internalize incidents like this.</p>
+
         <!--Images-->
 
 
@@ -104,8 +116,11 @@
     </div>
 
     <footer>
-
-
+        <div class="footer-content">
+            <h3>WSU CampusSafe</h3>
+            <p>Created by: SW9</p>
+            <p>Created On: 2/23/25</p>
+        </div>
     </footer>
 
 </body>
