--- a/Application/Front End/login.html
+++ b/Application/Front End/login.html
@@ -6,6 +6,7 @@
     <title> Login Form | WSU Campus Safe</title>
     <link rel="stylesheet" href="./cssFiles/loginStyles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script type="module" src="./JScriptFiles/firebaseauth.js"></script>
 </head>
 <body>
     <header>
@@ -21,15 +22,16 @@
         <div class = "form-login">
             <h1>Login</h1>
             <form action ="#">
+                <div id="loginMessage" class="messageDiv" style="display:none;"></div>
                 <div class="input-box">
-                    <input type="text" placeholder="Username" required>
-                    <i class='bx bxs-user-circle'></i>
+                    <input type="email" id="lEmail" placeholder="Email" required>
+                    <i class='bx bxs-envelope'></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" id="lPassword" placeholder="Password" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button class="btn" id="lButton">Login</button>
                 <div class="register-link">
                     <p>Don't have an account? <a href = "#"> Register</a></p>
                 </div>                
@@ -39,22 +41,22 @@
         <div class = "form-register">
             <h1>Register</h1>
             <form action ="#">
+                <div id="registerMessage" class="messageDiv" style="display:none;"></div>
                 <div class="input-box">
-                    <input type="text" placeholder="Username" required>
-                    <i class='bx bxs-user-circle'></i>
+                    <input type="email" id="rEmail" placeholder="Email" required>
+                    <i class='bx bxs-envelope'></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" id="rPassword" placeholder="Password" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
-                <button type="submit" class="btn">Register</button>
+                <button class="btn" id="rButton">Register</button>
                 <div class="login-link">
                     <p>Have an account already? <a href = "#"> Login</a></p>
                 </div>                
             </form>       
         </div>
     </div>
-
     <script src="./JScriptFiles/loginScript.js"></script>
 </body>
 </html>
