--- a/Application/Front End/login.html
+++ b/Application/Front End/login.html
@@ -43,6 +43,10 @@
             <form action ="#">
                 <div id="registerMessage" class="messageDiv" style="display:none;"></div>
                 <div class="input-box">
+                    <input type="text" id="rFName" placeholder="First Name" required>
+                    <i class='bx bxs-user-circle'></i>
+                </div>
+                <div class="input-box">
                     <input type="email" id="rEmail" placeholder="Email" required>
                     <i class='bx bxs-envelope'></i>
                 </div>
