--- a/Application/Front_End/SafetyInformation.html
+++ b/Application/Front_End/SafetyInformation.html
@@ -54,8 +54,8 @@
             <p> Below are some videos to keep you informed on how to act in an active shooter situation. Do not watch with volume on during an active shooter situation.</p>
 
             <div class="ActiveShooterVideos">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5VcSwejU2D0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Wv71agrw850" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5VcSwejU2D0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Active Shooter Training Video 1"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Wv71agrw850" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Active Shooter Training Video 2"></iframe>
     </div>
 
     <div class = "FireSafety">
