--- a/Application/Front_End/SubmitIncidentReport.html
+++ b/Application/Front_End/SubmitIncidentReport.html
@@ -7,18 +7,18 @@
     
     <link rel="stylesheet" href="./cssFiles/SubmitIncidentReport.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="./JScriptFiles/SubmitIncidentReport.js"></script>
+    <script type="module" src="./JScriptFiles/SubmitIncidentReport.js"></script>
 </head>
 <body>
-    <header>
+    <div class= "header">
         <h2 class="ProjectName">WSU CampusSafe</h2>
         <nav class="navigation">
             <a href="HomePage.html"> Home</a>
             <a href="SafetyInformation.html"> Safety Information</a>
-            <a href="#"> Contact Us</a>
-            <a href="#">Submit Incident Report</a>
+            <a href="Contact.html"> Contact Us</a>
+            <a href="SubmitIncidentReport.html">Submit Incident Report</a>
         </nav>
-    </header>
+    </div>
 
     <div class="container">
         <h2>Submit an Incident Report</h2>
@@ -26,16 +26,33 @@
             <label for="title">Title of Incident:</label>
             <input type="text" id="title" required>
 
+            <select id="type" required>
+                <option value="1">Sexual Assault/Rape</option>
+                <option value="2">Fire</option>
+                <option value="3">Shooter/Gunshots</option>
+                <option value="4">Medical</option>
+                <option value="5">Assault</option>
+                <option value="6">Harassment</option>
+            </select>
+
             <label for="date">Date:</label>
             <input type="date" id="date" required>
 
             <label for="time">Time:</label>
             <input type="time" id="time" required>
 
+            <label for="location">Location:</label>
+            <select id="location" required>
+                <option value="1">Compton Union Building</option>
+                <option value="2">Wilson-Short Hall</option>
+                <option value="3">Terrel Libraries</option>
+                <option value="4">CUE</option>
+            </select>
+
             <label for="description">Description:</label>
             <textarea id="description" rows="4" required></textarea>
 
-            <button type="button" onclick="submitReport()">Submit Report</button>
+            <button id="sButton" type="button">Submit Report</button>
         </form>
     </div>
 </body>
