Added Homepage and basic implementation of feedback form.

--- a/Application/Front_End/SubmitIncidentReport.html
+++ b/Application/Front_End/SubmitIncidentReport.html
@@ -26,7 +26,7 @@
             <label for="title">Title of Incident:</label>
             <input type="text" id="title" required>
 
-            <select id="type" required>
+            <select name="IncidentType" required>
                 <option value="1">Sexual Assault/Rape</option>
                 <option value="2">Fire</option>
                 <option value="3">Shooter/Gunshots</option>
