--- a/Application/Front_End/FeedbackForm.html
+++ b/Application/Front_End/FeedbackForm.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
+    <div class= "header">
+        <h2 class="ProjectName">WSU CampusSafe</h2>
+        <nav class="navigation">
+            <a href="HomePage.html"> Home</a>
+            <a href="SafetyInformation.html"> Safety Information</a>
+            <a href="Contact.html"> Contact Us</a>
+            <a href="SubmitIncidentReport.html">Submit Incident Report</a>
+        </nav>
+    </div>
+
+    <div class="FeedbackForm">
+        <h2>Feedback Form</h2>
+        <form id="feedbackForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+
+            <label for="feedback">Feedback:</label>
+            <textarea id="feedback" rows="4" required></textarea>
+
+            <button id="fButton" type="button">Submit Feedback</button>
+        </form>
     
 </body>
 </html>
