--- a/Application/Front_End/SafetyInformation.html
+++ b/Application/Front_End/SafetyInformation.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Login Form | WSU Campus Safe</title>
+    <title> Safety Information | WSU Campus Safe</title>
     <link rel="stylesheet" href="./cssFiles/SafetyInformation.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <div class= "header">
+    <header>
         <h2 class="ProjectName">WSU CampusSafe</h2>
         <nav class="navigation">
             <a href="HomePage.html"> Home</a>
@@ -18,7 +17,7 @@
             <a href="Contact.html"> Contact Us</a>
             <a href="SubmitIncidentReport.html">Submit Incident Report</a>
         </nav>
-    </div>
+    </header>
 
     <div class = "OverallReminder">
         <h2>General Safety Reminders</h2>
@@ -115,12 +114,11 @@
 
     </div>
 
-    <div class="footer-content">
+    <footer>
         <h3>WSU CampusSafe</h3>
         <p>Created by: SW9</p> 
         <p>Created On: 2/23/25</p>
-    </div>
-
+    </footer>
 </body>
 
 </html>
