--- a/Application/Front_End/login.html
+++ b/Application/Front_End/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./cssFiles/loginStyles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script type="module" src="./JScriptFiles/firebaseauth.js"></script>
+    <script type="module" src="./JScriptFiles/loginScript.js"></script>
 </head>
 <body>
     <header>
@@ -61,6 +62,5 @@
             </form>       
         </div>
     </div>
-    <script src="./JScriptFiles/loginScript.js"></script>
 </body>
 </html>
