Incorporated Feedback form into all links

--- a/Application/Front_End/FeedbackForm.html
+++ b/Application/Front_End/FeedbackForm.html
@@ -13,8 +13,9 @@
         <nav class="navigation">
             <a href="HomePage.html"> Home</a>
             <a href="SafetyInformation.html"> Safety Information</a>
-            <a href="Contact.html"> Contact Us</a>
             <a href="SubmitIncidentReport.html">Submit Incident Report</a>
+            <a href="FeedbackForm.html">Feedback Form</a>
+            <a href="Contact.html"> Contact Us</a>
         </nav>
     </header>
 
