--- a/Application/Front_End/HomePage.html
+++ b/Application/Front_End/HomePage.html
@@ -10,11 +10,12 @@
 <body>
     <header>
         <h2 class="ProjectName">WSU CampusSafe</h2>
-        <nav class="headerNavigation">
+        <nav class="navigation">
             <a href="HomePage.html"> Home</a>
             <a href="SafetyInformation.html"> Safety Information</a>
-            <a href="Contact.html"> Contact Us</a>
             <a href="SubmitIncidentReport.html">Submit Incident Report</a>
+            <a href="FeedbackForm.html">Feedback Form</a>
+            <a href="Contact.html"> Contact Us</a>
         </nav>
     </header>
     
