The only thing missing at this point really is the notification via email. Everything else works nicely.

--- a/Application/Front_End/Contact.html
+++ b/Application/Front_End/Contact.html
@@ -23,11 +23,11 @@
 
     <div class="Contact-Us">
         <h1>Contact Us</h1>
-        <p>Feel free to reach out to us with any questions or concerns you may have. We are here to help you!</p>
-        <br> You can also send a feedback form! <p>
+        <p>Feel free to reach out to us with any questions or concerns you may have. We are here to help you!
+        <br> You can also send a feedback form or if we really need to address something on this app, email one of us!
+        </p>
     </div>
 
-    <div class="ProgrammingContacts">
         <!-- Main Grid Container for all sections -->
         <div class="grid-container">
             <!-- Noah's Contact Section -->
@@ -90,7 +90,6 @@
                 </div>
             </div>
         </div>
-    </div>
 
 </body>
 
