Changed header's for publicly available pages.

--- a/Application/Front_End/login.html
+++ b/Application/Front_End/login.html
@@ -13,8 +13,9 @@
     <header>
         <h2 class="ProjectName">WSU CampusSafe</h2>
         <nav class="navigation">
-            <a href="SafetyInformation.html"> Safety Information</a>
-            <a href="#"> Contact Us</a>
+            <a href="PublicSafetyInformation.html"> Safety Information</a>
+            <a href="PublicContact.html"> Contact Us</a>
+            <a href="login.html"> Login Page</a>
             <button class="loginButton"> Login </button>
         </nav>
     </header>
