--- a/Application/Front_End/HomePage.html
+++ b/Application/Front_End/HomePage.html
@@ -14,6 +14,7 @@
             <a href="HomePage.html"> Home</a>
             <a href="SafetyInformation.html"> Safety Information</a>
             <a href="SubmitIncidentReport.html">Submit Incident Report</a>
+            <a href="SearchIncidentReport.html">Search Incident Report</a>
             <a href="FeedbackForm.html">Feedback Form</a>
             <a href="Contact.html"> Contact Us</a>
         </nav>
