Added new photos for Safety Information

--- a/Application/Front_End/PublicSafetyInformation.html
+++ b/Application/Front_End/PublicSafetyInformation.html
@@ -54,7 +54,8 @@
             <div class="ActiveShooterVideos">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/5VcSwejU2D0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Active Shooter Training Video 1"></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Wv71agrw850" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Active Shooter Training Video 2"></iframe>
-    </div>
+            </div>
+        </div>
 
     <div class = "FireSafety">
         <h2>Fire Safety</h2>   
@@ -72,7 +73,9 @@
         </ul>
 
         <!--Images-->
-
+        <div class = "FireSafetyImages">
+            <img src="./Assets/pass-method-use-fire-extinguisher.jpg" alt="PASS FIRE EXTINGUISHER USAGE GUIDE">
+        </div>
 
         <!--Videos-->
 
