--- a/Application/Front_End/SafetyInformation.html
+++ b/Application/Front_End/SafetyInformation.html
@@ -20,11 +20,12 @@
         </nav>
     </header>
 
-    <div class = "OverallReminder">
+    <div class="OverallReminder">
         <h2>General Safety Reminders</h2>
         <p>Always be aware of your surroundings. If you see something, say something. Report any suspicious activity to
             campus security or local law enforcement.</p>
-        <p> In case of an emergency, call 911 and guarantee your and others' safety before submitting an incident report with us.</p>
+        <p> In case of an emergency, call 911 and guarantee your and others' safety before submitting an incident report
+            with us.</p>
     </div>
 
     <!-- Active Shooter-->
@@ -42,28 +43,37 @@
             cell phone and/or pager. Silence will keep you hidden and safe.</p>
         <h4>Fight</h4>
         <p>As a last resort and only when your life is in imminent danger. Attempt to incapacitate the shooter. Act with
-            physical aggression and throw items at the active shooter. Go all out. It's better to be injured because you pulled a muscle than dead.
+            physical aggression and throw items at the active shooter. Go all out. It's better to be injured because you
+            pulled a muscle than dead.
             DO NOT CHARGE AT THEM. That's an easy ticket to death.</p>
         <h3>When Law Enforcement Arrives</h3>
         <p>Remain calm and follow instructions. Keep your hands visible at all times. Avoid making quick movements
             toward officers such as holding on to them for safety.</p>
-    
+
 
         <!-- Active Shooter Videos-->
-            <h2> Active Shooter Videos</h2>
-            <p> Below are some videos to keep you informed on how to act in an active shooter situation. Do not watch with volume on during an active shooter situation.</p>
+        <h2> Active Shooter Videos</h2>
+        <p> Below are some videos to keep you informed on how to act in an active shooter situation. Do not watch with
+            volume on during an active shooter situation.</p>
 
-            <div class="ActiveShooterVideos">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5VcSwejU2D0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Active Shooter Training Video 1"></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Wv71agrw850" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Active Shooter Training Video 2"></iframe>
+        <div class="ActiveShooterVideos">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5VcSwejU2D0" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen title="Active Shooter Training Video 1"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wv71agrw850" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen title="Active Shooter Training Video 2"></iframe>
+        </div>
     </div>
 
-    <div class = "FireSafety">
-        <h2>Fire Safety</h2>   
-        <p>Fire safety is important to know in case of a fire emergency. Below are some tips to keep you safe in case of a fire.</p>
+    <div class="FireSafety">
+        <h2>Fire Safety</h2>
+        <p>Fire safety is important to know in case of a fire emergency. Below are some tips to keep you safe in case of
+            a fire.</p>
         <h3>Fire Safety Tips</h3>
         <ul>
-            <li>Know the location of fire alarms and fire extinguishers in your building. Every second counts in a fire.</li>
+            <li>Know the location of fire alarms and fire extinguishers in your building. Every second counts in a fire.
+            </li>
             <li>Know the location of the nearest exit in case of a fire.</li>
             <li>Do not use elevators in case of a fire. They will become your coffin if you do.</li>
             <li>Feel the door before opening it. If it is hot, do not open it.</li>
@@ -74,16 +84,19 @@
         </ul>
 
         <!--Images-->
-
+        <div class = "FireSafetyImages">
+            <img src="./Assets/pass-method-use-fire-extinguisher.jpg" alt="PASS FIRE EXTINGUISHER USAGE GUIDE">
+        </div>
 
         <!--Videos-->
 
     </div>
 
 
-    <div class = "Medical">
+    <div class="Medical">
         <h2> Medical </h2>
-        <p>You don't have to be a doctor to save a life. All you need to do is stabilize the person until help arrives. Below are some tips to help you in case of a medical emergency.</p>
+        <p>You don't have to be a doctor to save a life. All you need to do is stabilize the person until help arrives.
+            Below are some tips to help you in case of a medical emergency.</p>
         <h3>Medical Emergency Tips</h3>
         <ul>
             <li>Call 911 immediately if you suspect someone is having a medical emergency.</li>
@@ -94,18 +107,19 @@
             <li>If the person is choking, perform the Heimlich maneuver.</li>
             <li>If the person is having a seizure, move objects away from them and do
 
-        <!--Images-->
+                <!--Images-->
 
 
-        <!--Videos-->
+                <!--Videos-->
 
     </div>
 
-    <div class = "SAR">
+    <div class="SAR">
         <h2> Sexual Assault and Rape </h2>
-        <p> Sexual assault and rape are serious crimes that can have long-lasting effects on the victim. Below are some tips to help you in case of a sexual
+        <p> Sexual assault and rape are serious crimes that can have long-lasting effects on the victim. Below are some
+            tips to help you in case of a sexual
             assault. It's important to get help as soon as possible.</p>
-        <p> If you are a victim of sexual assault, please call the National Sexual Assault Hotline at 
+        <p> If you are a victim of sexual assault, please call the National Sexual Assault Hotline at
             1-800-656-4673. They are available 24/7 to help you. Do not internalize incidents like this.</p>
 
         <!--Images-->
@@ -117,7 +131,7 @@
 
     <footer>
         <h3>WSU CampusSafe</h3>
-        <p>Created by: SW9</p> 
+        <p>Created by: SW9</p>
         <p>Created On: 2/23/25</p>
     </footer>
 </body>
