Incorporated Sort Button Functionality
Incorporated sort button functionality
Centered icons for dashboard buttons

--- a/Application/Front_End/HomePage.html
+++ b/Application/Front_End/HomePage.html
@@ -77,17 +77,17 @@
                 <input class="incidentSearchBar" id="search" type="text" placeholder="Search incidents..."></input>        
                 <!-- Sorting buttons -->
                 <div class="sortButtons">
-                    <button onclick="setSortMode('title')"
+                    <button id="titleButton"
                         id="titleButton"
                         class="sortByName">                       
                         Sort by Name
                     </button>
-                    <button onclick="setSortMode('date')"
+                    <button id="dateButton"
                         id="dateButton"
                         class="sortByDate">
                         Sort by Date
                     </button>
-                    <button onclick="setSortMode('time')"
+                    <button id="timeButton"
                         id="timeButton" 
                         class="sortByTime">
                         Sort by Time
