Began implementation of Notification System.

--- a/Application/Front_End/SubmitIncidentReport.html
+++ b/Application/Front_End/SubmitIncidentReport.html
@@ -61,7 +61,8 @@
 
             <label for="Building">Building:</label>
             <select id="Building" required>
-                
+                <!-- Will Populate with the needed buildings in a region depending on the 
+                 buildings in the selected region. -->
             </select>
 
             <label for="description">Description:</label>
