--- a/Application/Front_End/SubmitIncidentReport.html
+++ b/Application/Front_End/SubmitIncidentReport.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="./cssFiles/SubmitIncidentReport.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script type="module" src="./JScriptFiles/SubmitIncidentReport.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init({publicKey: "esmzYt2c5bwuDFSt0",});
+        })();
+    </script>
 </head>
 
 <body>
@@ -61,7 +68,8 @@
 
             <label for="Building">Building:</label>
             <select id="Building" required>
-                
+                <!-- Will Populate with the needed buildings in a region depending on the 
+                 buildings in the selected region. -->
             </select>
 
             <label for="description">Description:</label>
@@ -70,6 +78,9 @@
             <button id="sButton" type="submit">Submit Report</button>
         </form>
     </div>
+    
+    <div id="loading-spinner" style="display: none;">
+        <div class="spinner"></div>
+    </div>
 </body>
-
 </html>
