Cleaned up user interface
Made interactive buttons
Removed unnecessary links
Made sure header is universal on applicable pages

--- a/Application/Front_End/Contact.html
+++ b/Application/Front_End/Contact.html
@@ -34,7 +34,7 @@
         <!-- Noah's Contact Section -->
         <div class="Contact-Container">
             <div class="grid-item">
-                <p>Project Manager/Front End Developer:
+                <p>Front End Developer:
                     <br>Noah Manuel
                 </p>
             </div>
@@ -49,7 +49,7 @@
         <!-- Alan's Contact Section -->
         <div class="Contact-Container">
             <div class="grid-item">
-                <p>Team Member/Backend Developer & Database Support:
+                <p>Frontend/Backend Developer & Database Support:
                     <br>Alan Qiu
                 </p>
             </div>
@@ -64,7 +64,7 @@
         <!-- Finley's Contact Section -->
         <div class="Contact-Container">
             <div class="grid-item">
-                <p>Team Member/Frontend Developer:
+                <p>Frontend Developer:
                     <br>Finley Blaylock
                 </p>
             </div>
@@ -79,7 +79,7 @@
         <!-- Maximus's Contact Section -->
         <div class="Contact-Container">
             <div class="grid-item">
-                <p>Team Member/Research and Bug Tester:
+                <p>Research and Bug Tester:
                     <br> Maximus Upton
                 </p>
             </div>
