--- a/Application/Front_End/HomePage.html
+++ b/Application/Front_End/HomePage.html
@@ -8,6 +8,7 @@
     <script type="module" src="./JScriptFiles/SearchIncidentReport.js"></script>
     <script type="module" src="./JScriptFiles/SearchMyIncidentReport.js"></script>
     <script type="module" src="./JScriptFiles/HomePage.js"></script>
+    <script type="module" src="./JScriptFiles/emailVerification.js"></script>
 </head>
 <body>
     <header>
@@ -15,8 +16,6 @@
         <nav class="navigation">
             <a href="HomePage.html"> Home</a>
             <a href="SafetyInformation.html"> Safety Information</a>
-            <a href="SubmitIncidentReport.html">Submit Incident Report</a>
-            <a href="SearchIncidentReport.html">Search Incident Report</a>
             <a href="FeedbackForm.html">Feedback Form</a>
             <a href="Contact.html"> Contact Us</a>
         </nav>
@@ -68,7 +67,7 @@
             </nav>
             <ul class="nav nav--manage">
                 <a href="SubmitIncidentReport.html"> Submit Incident Report </a>
-                <button class="logoutButton" id="logout"> <a href="#">Logout</a></button>
+                <button class="logoutButton" id="logout">Logout</button>
             </ul>   
         </div>
         <div class="main">
