--- a/Application/Front_End/PublicSafetyInformation.html
+++ b/Application/Front_End/PublicSafetyInformation.html
@@ -12,10 +12,11 @@
     <header>
         <h2 class="ProjectName">WSU CampusSafe</h2>
         <nav class="navigation">
-            <a href="PublicSafetyInformation.html"> Safety Information</a>
-            <a href="PublicContact.html"> Contact Us</a>
-            <a href="login.html"> Login Page</a>
-            <button class="loginButton"> Login </button>
+            <a href="login.html"> Home</a>
+            <a href="SafetyInformation.html"> Safety Information</a>
+            <a href="login.html">Submit Incident Report</a>
+            <a href="FeedbackForm.html">Feedback Form</a>
+            <a href="Contact.html"> Contact Us</a>
         </nav>
     </header>
     <div class = "OverallReminder">
