--- a/Application/Front_End/login.html
+++ b/Application/Front_End/login.html
@@ -13,9 +13,8 @@
     <header>
         <h2 class="ProjectName">WSU CampusSafe</h2>
         <nav class="navigation">
-            <a href="PublicSafetyInformation.html"> Safety Information</a>
-            <a href="PublicContact.html"> Contact Us</a>
-            <a href="login.html"> Login Page</a>
+            <a class="links" href="PublicSafetyInformation.html"> Safety Information</a>
+            <a class="links" href="PublicContact.html"> Contact Us</a>
             <button class="loginButton"> Login </button>
         </nav>
     </header>
