--- a/Application/Front_End/HomePage.html
+++ b/Application/Front_End/HomePage.html
@@ -153,6 +153,9 @@
           <p id="modalDescription" class="text-gray-800 whitespace-pre-wrap"></p>
         </div>
     </div>
+    <div id="loading-spinner" style="display: none;">
+        <div class="spinner"></div>
+    </div>
 <link rel="stylesheet" href="./cssFiles/HomePageStyles.css">
 </body>
 </html>
